# jpksh90.github.io

./: build.sh  config.yaml  contact.html  generate.py  index.html  projects.html  publications.html  pyproject.toml  requirements.txt  research.html  site-utils.py  teaching.html
.github/workflows/: clean-build-deploy.yml
content/: contact.md  index.md  publications.md  publications_talks.md  research.md  service.md  teaching.md  teaching_service.md
docs/: index.html  publications.html  publications_talks.html  research.html  service.html  teaching.html  teaching_service.html
docs/stylesheets/: pygment_trac.css  styles.css
images/: IMG_1644.heic
personal_website.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
publications/: 0664.bib  0664_bib.html  publications.html
stylesheets/: styles.css
templates/: base.html
